--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script language="javascript" type="text/javascript" src="image_to_resist_with_drawing.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
+    <script defer src="./image_to_resist_with_drawing.js"></script>
+
   <style>
     body {
       padding: 0;
